--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.12",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/mongoose": "^5.11.97",
@@ -30,6 +31,7 @@
     "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "chai": "^5.1.0",
     "eslint": "^8.56.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-plugin-import": "^2.29.1",
