--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
-    "rootDir": "./src",
+    "rootDir": "./",
     "outDir": "./build",
     "esModuleInterop": true,
     "strict": true,
@@ -12,5 +12,5 @@
     "src/**/*",
     "jest.config.ts"
   ],
-  "exclude": ["node_modules","build"]
+  "exclude": ["node_modules", "build"]
 }
