--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.4",
+    "amqplib": "^0.10.3",
     "express": "^4.18.2",
     "mongoose": "^8.1.2",
     "swagger-jsdoc": "^6.2.8",
@@ -25,6 +25,7 @@
     "@types/chai": "^4.3.12",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/mocha": "^10.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.11.17",
     "@types/sinon": "^17.0.3",
@@ -33,12 +34,14 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "chai": "^5.1.0",
+    "dotenv": "^16.4.5",
     "eslint": "^8.56.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.7.0",
+    "mocha": "^10.3.0",
     "nodemon": "^3.0.3",
     "sinon": "^17.0.1",
     "supertest": "^6.3.4",
