--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.5",
     "@types/chai": "^4.3.12",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
