--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "amqplib": "^0.10.3",
     "express": "^4.18.2",
+    "import-local": "^3.1.0",
     "mongoose": "^8.1.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
