--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,5 +8,7 @@
         "ecmaVersion": "latest"
     },
     "rules": {
+        "@typescript-eslint/strict-boolean-expressions": "off",
+        "@typescript-eslint/no-misused-promises": "off"
     }
 }
