--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "amqplib": "^0.10.3",
     "express": "^4.18.2",
     "mongoose": "^8.1.2",
+    "RabitMQClient": "^1.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   },
