--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "amqplib": "^0.10.3",
     "express": "^4.18.2",
-    "mongoose": "^8.1.2",
+    "mongoose": "^8.2.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   },
@@ -34,6 +34,7 @@
     "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "amqplib-mocks": "^1.3.0",
     "chai": "^5.1.0",
     "dotenv": "^16.4.5",
     "eslint": "^8.56.0",
