--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dev.linkopus.rabbitmqclient",
   "version": "1.0.0",
   "description": "Kickstart your micro-service development journey with this customizable template. Built on Node.js",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "scripts": {
     "start": "ts-node src/index.ts",
     "build": "tsc",
@@ -16,8 +16,10 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.10.3",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "find-config": "^1.0.0"
+
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.5",
@@ -29,13 +31,11 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "amqplib-mocks": "^1.3.0",
-    "dotenv": "^16.4.5",
     "eslint": "^8.56.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
-    "import-local": "^3.1.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.3",
     "supertest": "^6.3.4",
