--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "RabitMQClient",
+  "name": "dev.linkopus.rabbitmqclient",
   "version": "1.0.0",
   "description": "Kickstart your micro-service development journey with this customizable template. Built on Node.js",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "start": "ts-node src/index.ts",
     "build": "tsc",
@@ -16,36 +16,28 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.10.3",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "mongoose": "^8.1.2",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "find-config": "^1.0.0"
+
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.5",
-    "@types/chai": "^4.3.12",
     "@types/express": "^4.17.21",
+    "@types/find-config": "^1.0.4",
     "@types/jest": "^29.5.12",
-    "@types/mocha": "^10.0.6",
-    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.11.21",
-    "@types/sinon": "^17.0.3",
     "@types/supertest": "^6.0.2",
-    "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
-    "chai": "^5.1.0",
-    "dotenv": "^16.4.5",
+    "amqplib-mocks": "^1.3.0",
     "eslint": "^8.56.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
-    "import-local": "^3.1.0",
     "jest": "^29.7.0",
-    "mocha": "^10.3.0",
     "nodemon": "^3.0.3",
-    "sinon": "^17.0.1",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
